creates new js file with completed hard mode challenge

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="data.js"></script>
-    <script type="text/javascript" src="client.js"></script>
+    <script type="text/javascript" src="client_hard.js"></script>
 
   </head>
   <body>
